--- a/Uncertainties.ipynb
+++ b/Uncertainties.ipynb
@@ -289,20 +289,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "O1yF_YShyp1j",
-        "outputId": "e604c079-d2c6-4979-b1c0-8f620c00c2de"
+        "outputId": "2c9e2061-bba2-414d-e83a-0311a70dcb4e"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "\u001b[?25l   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.0/60.1 kB\u001b[0m \u001b[31m?\u001b[0m eta \u001b[36m-:--:--\u001b[0m\r\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m60.1/60.1 kB\u001b[0m \u001b[31m2.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25l   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.0/60.1 kB\u001b[0m \u001b[31m?\u001b[0m eta \u001b[36m-:--:--\u001b[0m\r\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m60.1/60.1 kB\u001b[0m \u001b[31m2.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25h"
           ]
         }
@@ -332,9 +332,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "rLDGqkQczAWv",
-        "outputId": "977900bb-d7af-4d29-b1f5-0dea9de07e2d"
+        "outputId": "6b8584b3-1186-419e-d7b7-6aef4bc817f7"
       },
-      "execution_count": 3,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -363,7 +363,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "S6k8eMOuyp1j",
-        "outputId": "020f8c03-af2b-4456-fbb0-ce8b2114b9c0"
+        "outputId": "3bc2a0d0-7df5-4f31-e74b-2e03ff3f29e6"
       },
       "outputs": [
         {
@@ -396,13 +396,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 6,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "9Plvz6pOyp1k",
-        "outputId": "4a76fdbe-6084-4cdc-df9b-9d8a51d703c2"
+        "outputId": "f213d4ad-b2ce-4b57-f675-db19813fc7c7"
       },
       "outputs": [
         {
@@ -432,7 +432,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {
         "id": "0gF-sMPQyp1k"
       },
@@ -440,7 +440,9 @@
       "source": [
         "jack = uc.ufloat(1.33, 0.03)\n",
         "jill = uc.ufloat(1.28, 0.02)\n",
-        "# The uncertainties of both values are aligned with one another as the minimum of jacks value is 1.3 and the maximum of jills value is 1.3 which means that they are slightly in agreement"
+        "# The uncertainties of both values are not aligned with one another as the minimum of jacks value is 1.3 and the maximum of jills value is 1.3,\n",
+        "# which means that they do not overlap.\n",
+        "# The refractive index of water is 1.33 but this is outside of jill's measurement even when including her errors."
       ]
     },
     {
@@ -459,13 +461,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 8,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "tt50iRs6yp1k",
-        "outputId": "e6482520-a8f8-47b4-f53e-787906b0c379"
+        "outputId": "d893ad63-8ce2-4e64-c5d6-50f3aa46225b"
       },
       "outputs": [
         {
@@ -502,22 +504,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 9,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "dLRiXSLFyp1k",
-        "outputId": "dee46772-289c-4fd3-8918-fe6b0743e367"
+        "outputId": "bbdd8421-1f56-4e02-8bf3-d6f93673828e"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "f1 is 36.70332148729759 with an error of 1.6027478520047354\n",
-            "f2 is 39.40727378225905 with an error of 1.493585514834509\n",
-            "f3 is 46.24246656697299 with an error of 1.3454426987769668\n"
+            "f1 is 38.24745337649154 with an error of 1.6700605379580133\n",
+            "f2 is 41.06516265028539 with an error of 1.5562781935426817\n",
+            "f3 is 48.18791630742113 with an error of 1.4018271041233974\n"
           ]
         }
       ],
@@ -525,8 +527,8 @@
         "l_x = uc.ufloat(10.2, 0.2)\n",
         "l_y = uc.ufloat(5.2, 0.3)\n",
         "l_z = uc.ufloat(20, 0.1)\n",
-        "c = uc.ufloat(331.3, 0.606)\n",
         "T = uc.ufloat(23, 1)\n",
+        "c = 331.3 + 0.606*T\n",
         "f1 = (c/2)*um.sqrt((1/(l_x*l_x))+(1/(l_y*l_y))+(1/(l_z*l_z)))\n",
         "f2 = (c/2)*um.sqrt((1/(l_x*l_x))+(1/(l_y*l_y))+(4/(l_z*l_z)))\n",
         "f3 = (c/2)*um.sqrt((4/(l_x*l_x))+(1/(l_y*l_y))+(1/(l_z*l_z)))\n",
@@ -551,13 +553,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 10,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "_ykP_Jauyp1k",
-        "outputId": "e660ee70-6b56-49b1-e6d4-281a11ccb64b"
+        "outputId": "d4cdd395-3763-4a16-cb6a-a23973ab7151"
       },
       "outputs": [
         {
@@ -605,13 +607,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 11,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "uDtb5JaGyp1k",
-        "outputId": "e1c3f099-ef43-4017-af97-e5de17d44d43"
+        "outputId": "978e391e-9f6a-4e29-9ce8-ac1039517ff5"
       },
       "outputs": [
         {
